# webgpu-exploration

./: Cargo.toml  README.md
Data/: scalars.hex
bls12-381/: Cargo.toml  WEBGPU.md  constants.py
bls12-381/src/: Fp.wgsl  lib.rs
bls12-381/tests/: fp_tests.rs
bls12_381/: Cargo.toml  README.md  constants.py  convert.rs  my_bench_data_gpu.txt  test.py  todo  tonelli-shanks.py  u32.txt
bls12_381/benches/: Fp.rs  Fp2.rs  Fp6.rs  G1.rs
bls12_381/python/: fp2_sop.py  fp6_sop.py  lexicographical.py  montgomery.py  pow_vartime.py  test_creation.py  tf
bls12_381/src/: Fp_all.wgsl  lib.rs  main.rs  validate.sh
bls12_381/src/wgsl/: Fp.wgsl  Fp12.wgsl  Fp2.wgsl  Fp2_pow_vartime.wgsl  Fp2_sop.wgsl  Fp6.wgsl  Fp6_sop.wgsl  g1.wgsl  g2.wgsl
bls12_381/tests/: fp2_tests.rs  fp6_tests.rs  fp_tests.rs  g1_tests.rs
gpu_impl/: README.md  config.toml
gpu_impl/Data/: points.hex
gpu_impl/src/: MSM.rs  MSM.wgsl  SHM.wgsl  batch_functions_call.wgsl  chain.wgsl  compute_bucket_sums.wgsl  curve_functions_call.wgsl  functions_call.wgsl  grafics.rs  initialize_counters_and_sizes.wgsl  lib.rs  (+10 more)
src/: MSM_cpu.rs  asm.wgsl  batch_functions.rs  compute_bucket_sums.wgsl  curve.wgsl  host_curve.rs  host_reduce.rs  initialize_counters_and_sizes.wgsl  lib.rs  precompute_points.wgsl  process_signed_digits.wgsl
submission-msm-gpu_with_tests/: Cargo.toml  build.rs
tests/: SHM_tests.wgsl  chain_tests.wgsl  compute_bucket_sums_tests.wgsl  curve_tests.wgsl  initialize_counters_tests.wgsl  mp_tests.wgsl  partition4096_tests.wgsl  process_signed_digits_tests.wgsl  sort_counts_test.wgsl
(+66 files in other folders)
