[package]
name = "cudatowgsl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "*"
pollster = "0.2"
bytemuck = { version = "1.12", features = [ "derive" ] }
env_logger = "0.10.0"
futures-intrusive = "0.5.0"
serde = { version = "1.0.164", features = ["derive"] }
rand = "0.8"
plotters = "0.3.0"
toml = "0.5.8"

[dev-dependencies]
serde_json = "1.0.96"
criterion = "0.3"

[[bench]]
name = "my_benchmark"
path = "tests/benchmark_tests.rs"
harness = false
